# VeloxDFS

./: .gitignore  .gitmodules  .travis.yml  .vimrc  BlockMetadata_8java.html  CITATION.cff  Coding-style-and-rules_8md.html  Compiling-Installing_8md.html  Configuration-file-reference_8md.html  Configuration_8java.html  Configuration_8md.html  Developing-VeloxDFS_8md.html  FAQ_8md.html  IOoperation_8cc.html  IOoperation_8cc__incl.dot  IOoperation_8cc__incl.map  IOoperation_8cc__incl.md5  IOoperation_8hh.html  IOoperation_8hh__dep__incl.dot  IOoperation_8hh__dep__incl.map  IOoperation_8hh__dep__incl.md5  IOoperation_8hh__incl.dot  IOoperation_8hh__incl.map  IOoperation_8hh__incl.md5  IOoperation_8hh_source.html  LICENSE  Makefile.am  Metadata_8java.html  README.md  README_8md.html  VeloxDFS-architecture_8md.html  VeloxDFS_8cc.html  VeloxDFS_8cc__incl.dot  VeloxDFS_8cc__incl.md5  VeloxDFS_8java.html  VeloxMR-architecture_8md.html  acceptor_8hh_source.html  annotated.html  asyncchannel_8cc.html  asyncchannel_8cc__incl.dot  (+1636 more)
.github/: PULL_REQUEST_TEMPLATE.md  make_release.sh
.github/workflows/: ci.yml  docs.yml
doc/: .eclipse.json  Doxyfile  deploy_key.enc  eclipse.json  eclipsed_complete.bash  eclipsefs.1  header.html
doc/CourseReport'14/: Makefile  aggregation.eps  arch.eps  inverted_index.eps  ref.bib  report.tex  word_count.eps
doc/Poster'13/: Makefile  abstract.tex  acmieeeSC.cls  acmsiggraph.cls  algorithm2e.tex  architecture.tex  conclusion.tex  graphic1.eps  intro.tex  nservers.qwet.eps  outline.txt  poster.ps  poster.tex
doc/Proposal'14/: Makefile  proposal.bbl  proposal.tex
m4/: AX_BOOST_BASE.m4  AX_BOOST_STATIC_LINKAGE.m4  AX_CXX_COMPILE_STDCXX.m4  AX_JNI_INCLUDE_DIR.m4  AX_PROG_RUBY_VERSION.m4  ECLIPSE_FIND_BOOST.m4  FULLY_EVAL.m4  WARN.m4
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6a.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_8.js  (+201 more)
src/: tags
src/blocknode/: block_node.cc  block_node.hh  block_node_modify.cc  block_node_router.cc  block_node_router.hh  block_node_router_modify.cc  lblock_manager.hh  local_io.cc  local_io.hh
src/cache/: cache.hh  peercache.cc  peercache.hh
src/client/: cli_driver.cc  cli_driver.hh  client.cc  dfs-backup.cc  dfs-modify.cc  dfs.cc  dfs.cc.bak  dfs.cc.bak_2020_01_17  dfs.hh  dfs_zookeeper.cc  vdfs.cc  vdfs.hh
src/common/: block.hh  blockmetadata.hh  context.cc  context.hh  context_singleton.cc  context_singleton.hh  definitions.hh  dl_loader.cc  dl_loader.hh  ecfs.hh  hash.cc  hash.hh  histogram.cc  histogram.hh  logger.cc  logger.hh  logical_block_metadata.hh  settings.cc  settings.hh  shared_memory.cc  shared_memory.hh  util.cc  util.hh
src/dht/: DHTclient.cc  DHTclient.hh  DHTdefinitions.hh  DHTserver.cc  DHTserver.hh
src/diskIO/: filetext.hh
src/fileleader/: directory.cc  directory.hh  file_leader.cc  file_leader.hh  file_leader_router.cc  file_leader_router.hh
src/fs/: basicio.cc  blockinfo.hh  cacheinfo.cc  dfs.cc  dfs.hh  dfsformat.cc  dfsget.cc  dfsinit.cc  dfsls.cc  dfsput.cc  dfsput.cc.bak  dfsrm.cc  dfsshow.cc  directory.cc  directory.cc.bak  directory.hh  eclipsed.in  fileinfo.hh  fileio.cc  fileio.cc.bak2  fileio.hh  fileio.hh.bak2  ireader.cc  ireader.h  iwriter.cc  iwriter.h  main.cc
src/jobs/: job.hh  task.hh
src/mapreduce/: dataset.cc  dataset.hh  eclipsemr.cc  eclipsemr.hh  executor.cc  executor.hh  job.cc  job.hh  masterlocal.hh  mr_traits.cc  mr_traits.hh  nodeexecutor.cc  nodeexecutor.hh  peerlocalmr.cc  peerlocalmr.hh  peermr.cc  peermr.hh  task.cc  task.hh
src/messages/: IOoperation.cc  IOoperation.hh  blob.hh  block.cc  block.hh  blockdel.cc  blockdel.hh  blockinfo.cc  blockinfo.hh  blocklist.cc  blocklist.hh  blockrequest.cc  blockrequest.hh  blockstatus.cc  blockstatus.hh  blockupdate.cc  blockupdate.hh  boost_impl.cc  boost_impl.hh  boundaries.cc  boundaries.hh  cacheinfo.cc  cacheinfo.hh  checkexist.cc  checkexist.hh  communication.hh  control.cc  control.hh  executable.hh  factory.cc  factory.hh  file.cc  file.hh  filedel.cc  filedel.hh  filedescription.cc  filedescription.hh  fileexist.cc  fileexist.hh  fileinfo.cc  (+66 more)
src/network/: acceptor.cc  acceptor.hh  asio.cc  asio.hh  asyncchannel.cc  asyncchannel.hh  asyncnetwork.hh  asyncnode.hh  centralizednetworkmaster.cc  centralizednetworkmaster.hh  centralizedtopology.cc  centralizedtopology.hh  channel.cc  channel.hh  client_handler.cc  client_handler.hh  communication.hh  connection.hh  connector.cc  connector.hh  meshnetwork.cc  meshnetwork.hh  meshtopology.cc  meshtopology.hh  netobserver.hh  network.hh  p2p.cc  p2p.hh  ringtopology.cc  ringtopology.hh  router.hh  router_decorator.cc  router_decorator.hh  server.cc  server.hh  server_handler.cc  server_handler.hh  simple_router.cc  simple_router.hh  topology.cc  (+1 more)
src/nodes/: blocksystem.hh  dbs.hh  dfs.cc  dfs.hh  dio.cc  dio.hh  eclipsedfs.hh  filesystem.hh  fs.hh  io_interface.hh  ipull.hh  ipush.hh  local_io.cc  local_io.hh  machine.cc  machine.hh  node.cc  node.hh  nodelocal.cc  nodelocal.hh  noderemote.cc  noderemote.hh  peer.cc  peer.hh  peerdfs.cc  peerdfs.hh  peerlocal.cc  peerlocal.hh  peermediator.cc  peermediator.hh  peerremote.cc  peerremote.hh  remotedfs.cc  remotedfs.hh  router.cc  (+1 more)
tests/: Makefile.am  cache_test.cc  cache_vector.cc  centralizedtopology.cc  ctop_executor.in  dataset.cc  dataset.hh  dht_test.cc  dl_test.cc  eclipse_debug.in  executor.cc  fileio_test.cc  integration.in  integration_test.sh  main.cc  messages_test.cc  metadata_test.cc  mr_traits_test.cc  network.cc  network_executor.in  network_test.cc  nodes.cc  nodes_executor.in  nodes_test.cc  settings_tests.cc  stats_scheduler_test.cc  task.cc  topology_test.cc  vdfs.cc
tests/java/: ConfigurationTest.java  VeloxDFSTest.java
zk/: INSTALL  docker-composer.yml
(+95 files in other folders)
